; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_utils.c_fragment_usse_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_utils.c_fragment_usse_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fragment_usse_free(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @sceKernelGetMemBlockBase(i32 %4, i8** %3)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %13

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @sceGxmUnmapFragmentUsseMemory(i8* %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @sceKernelFreeMemBlock(i32 %11)
  br label %13

13:                                               ; preds = %8, %7
  ret void
}

declare dso_local i64 @sceKernelGetMemBlockBase(i32, i8**) #1

declare dso_local i32 @sceGxmUnmapFragmentUsseMemory(i8*) #1

declare dso_local i32 @sceKernelFreeMemBlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
